--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Reset de estilos padrões */
 * {
-    margin: 0;
-    padding: 0;
+    margin: 16px;
+    padding: 15;
     box-sizing: border-box;
 }
 
@@ -16,8 +16,8 @@ body {
 /* Cabeçalho e Navegação */
 header {
     background-color: #333;
-    color: #fff;
-    padding: 10px 0;
+    color: #CE2E67;
+    padding: 30px 0;
 }
 
 nav ul {
@@ -27,11 +27,11 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 0 16px;
 }
 
 nav ul li a {
-    color: #fff;
+    color: #5B0F26;
     text-decoration: none;
     font-weight: bold;
 }
@@ -49,7 +49,7 @@ main {
 
 /* Margem superior de 50px para a página inicial */
 body {
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 /* Ajuste da fonte */
@@ -74,7 +74,7 @@ section {
 
 /* Estilos da seção de Projetos */
 .projeto {
-    background-color: #fff;
+    background-color: #BF2161;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 8px;
@@ -97,25 +97,25 @@ input, textarea {
 
 button {
     padding: 10px 15px;
-    background-color: #333;
+    background-color: #70132B;
     color: #fff;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 0px;
     font-size: 1.1rem;
 }
 
 button:hover {
-    background-color: #444;
+    background-color: #70132B;
 }
 
 /* Rodapé */
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #333;
+    background-color: #70132B;
     color: #fff;
-    margin-top: 40px;
+    margin-top: 100px;
 }
 
     margin-top: 40px;
