--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+<style>
 /* Reset de estilos padrões */
 * {
     margin: 16px;
@@ -15,9 +16,13 @@ body {
 
 /* Cabeçalho e Navegação */
 header {
-    background-color: #333;
+    background-color: none;
     color: #CE2E67;
-    padding: 0px;
+    padding: 15px;
+}
+
+div {
+  animation: mymove 5s infinite;
 }
 
 nav ul {
@@ -27,7 +32,7 @@ nav ul {
 }
 
 nav ul li {
-    margin: 016px;
+    margin: 015px;
 }
 
 nav ul li a {
@@ -54,30 +59,70 @@ body {
 
 /* Ajuste da fonte */
 h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin-bottom: 20px;
+    text-align: center
 }
 
 h2 {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     margin-bottom: 10px;
+    text-align: left
 }
 
-p {
-    font-size: 1.1rem;
-    margin-bottom: 20px;
+h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    text-align: left
 }
 
 section {
     margin-bottom: 40px;
 }
 
+.botao {
+  padding: 10px 20px;
+  font-size: 12px;
+  color: white;
+  background-color: #fa82b4;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+/* Efeito de animação no hover */
+.botao:hover {
+  animation: animaBotao 0.5s ease-in-out forwards;
+  background-color: #fa673e; /* Cor mais escura no hover */
+  transform: scale(1.1); /* Aumenta o tamanho do botão */
+}
+
+/* Definição da animação */
+@keyframes animaBotao {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.05);
+    opacity: 0.8;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 /* Estilos da seção de Projetos */
+div {
+  animation: mymove 5s infinite;
+}
 .projeto {
-    background-color: #BF2161;
+    background-color: none;
     padding: 20px;
     margin-bottom: 20px;
-    border-radius: 8px;
+    border-radius: 2px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -120,3 +165,4 @@ footer {
 
     margin-top: 40px;
 }
+</style>
