--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
     line-height: 1.6;
     background-color: #f4f4f4;
     color: #333;
+    background-image: radial-gradient(pink, white);
+}
 }
 
 /* Cabeçalho e Navegação */
@@ -41,6 +43,133 @@ nav ul li a {
     font-weight: bold;
 }
 
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+/* Estilo principal */
+main {
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* Margem superior de 50px para a página inicial */
+body {
+    margin-top: 100px;
+}
+
+/* Ajuste da fonte */
+h1 {
+    font-size: 3rem;
+    margin-bottom: 20px;
+    text-align: center
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    text-align: left
+}
+
+h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    text-align: left
+}
+
+section {
+    margin-bottom: 40px;
+}
+
+.botao {
+  padding: 10px 20px;
+  font-size: 12px;
+  color: white;
+  background-color: #fa82b4;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+/* Efeito de animação no hover */
+.botao:hover {
+  animation: animaBotao 0.5s ease-in-out forwards;
+  background-color: #fa673e; /* Cor mais escura no hover */
+  transform: scale(1.1); /* Aumenta o tamanho do botão */
+}
+
+/* Definição da animação */
+@keyframes animaBotao {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.05);
+    opacity: 0.8;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+/* Estilos da seção de Projetos */
+div {
+  animation: mymove 5s infinite;
+}
+.projeto {
+    background-color: none;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Formulário de Contato */
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+input, textarea {
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.botao {
+  padding: 10px 20px;
+  font-size: 12px;
+  color: white;
+  background-color: #fa82b4;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #70132B;
+}
+
+/* Rodapé */
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #70132B;
+    color: #fff;
+    margin-top: 100px;
+}
+
+    margin-top: 40px;
+}
+
+</style>
 nav ul li a:hover {
     text-decoration: underline;
 }
