--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header nav ul li {
     padding: 0 40px;
 }
 
-header .beatiz-contato button {
+header .beatriz-contato button {
     padding: 10px 40px;
     font-size: 18px;
     font-weight: 600;
