--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h2.titulo span{
     color: #960543;
 }
 
-button:hover{
+button:hover, form .enviar input:hover{
     box-shadow: 0px 0px 8px #ffcca2;
     transform: scale(1.05);
 }
@@ -108,7 +108,7 @@ section.topo-do-site .flex{
 /*ESTILO DAS ESPECIALIDADES*/
 
 section.skills{
-    padding: 177px 4%;
+    padding: 80px 4%;
 }
 
 section.skills h2{
@@ -157,6 +157,7 @@ section.sobre{
 section.sobre .flex{
     align-items: center;
     gap: 60px;
+    margin-bottom: 60px;
 }
 
 .sobre .txt-sobre{
@@ -192,4 +193,114 @@ transition: .2s;
 
 .sobre .txt-sobre .redes-sociais i{
     color: white;
+}
+
+/*ESTILO DO PORTIFOLIO*/
+
+section.trabalhos{
+    padding: 100px 4%;
+    box-shadow: 0 0 40px 10px #ffa2d0b0;
+}
+
+section.trabalhos h2{
+    margin-bottom: 70px;
+}
+
+section.trabalhos .flex{
+    justify-content: space-around;
+}
+
+.img-port{
+    width: 360px;
+    height: 460px;
+    background-color: #ffa5cc;
+    background-size: cover;
+    background-position: 100% 0%;
+    transition: 8s;
+    cursor: pointer;
+    border-radius: 40px;
+    position: relative;
+}
+
+.img-port:hover{
+    background-position: 100% 100%;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #69032f81;
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 450;
+    color: white;
+    opacity: 0;
+    transition: .5s;
+}
+
+.overlay:hover{
+    opacity: 1;
+}
+
+/*ESTILO DO FORMULARIO*/
+
+section.formulario{
+    padding: 80px 4%;   
+}
+
+section.formulario h2{
+    margin-bottom: 40px;
+}
+
+form{
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 15px;
+}
+
+form input, form textarea{
+    width: 100%;
+    background-color:#ad134ebd;
+    border: none;
+    outline: none;
+    padding: 20px 15px;
+    border-radius: 20px;
+    color: #ffffff;
+    font-size: 18px;
+}
+
+form input::placeholder{
+    color: white;
+}
+
+form textarea::placeholder{
+    color: white;
+}
+
+form textarea{
+    resize: none;
+    height: 200px;
+}
+
+form .enviar{
+    margin-top: 20px;
+    text-align: center;
+}
+
+form .enviar input{
+    width: 120px;
+    color: #ffffff;
+    background-color:#960543;
+    font-weight: 700;
+    cursor: pointer;
+    transition: .2s;
 }
