--- a/style.css
+++ b/style.css
@@ -31,11 +31,6 @@ body {
     transition: .2s;
 }
 
-h2.titulo{
-    color: #960543;
-    font-size: 40px;
-    text-align: center;
-}
 
 h2.titulo span{
     color: #960543;
@@ -56,6 +51,11 @@ header .interface {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+header .interface img{
+    width: 150px;
+    height: 81px;
 }
 
 header a {
@@ -316,7 +316,118 @@ footer .flex{
     justify-content: space-between;
 }
 
+.logo-footer img{
+    width: 100px;
+    height: 54px;
+}
+
 .line-footer .redes-sociais i{
     color: white;
 }
 
+@media screen and (max-width: 979px){
+
+    /*classes gerais*/
+    .flex{
+         flex-direction: column;
+    }
+
+    h2.titulo{
+        font-size: 30px;
+        line-height: 20px;
+    }
+
+    /*cabeçalho*/
+
+    header .interface img{
+        align-items: center;
+    }
+
+    .menu-desktop, .beatriz-contato{
+        display: none;
+    }
+
+    /* topo do site */
+    section.topo-do-site .flex{
+        gap: 40px;
+    }
+    
+    section.topo-do-site{
+        padding: 10px 8%;
+    }
+
+    .topo-do-site h1{
+        font-size: 25px;
+    }
+
+    .topo-do-site .img-topo-site img{
+        width: 80%;
+    }
+
+    /*ESTILO DAS ESPECIALIDADES*/
+
+    section.skills{
+        padding: 80px 8%;
+    }
+
+    section.skills .interface h2{
+        font-size: 35px;
+        text-align: center;
+    }
+
+    /* sobre */
+
+    section.sobre{
+        padding: 40px 8%;
+    }
+
+    .sobre .txt-sobre h2{
+        font-size: 34px;
+        line-height: 35px;
+        text-align: center;
+    }
+
+    .redes-sociais{
+        margin-top: 50px;
+        text-align: center;
+    }
+
+    .img-sobre img{
+        width: 100%;
+    }
+
+    /* potifolio */
+
+    section.trabalhos{
+        padding: 80px 8%;
+    }
+
+    section.trabalhos .interface h2{
+        text-align: center;
+    }
+
+    .img-port{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    section.trabalhos .flex{
+        gap: 60px;
+    }
+
+    /* formulario */
+
+    section.formulario .interface h2{
+        text-align: center;
+    }
+
+    /* rodape */
+
+    footer .flex{
+        flex-direction: column;
+    }
+
+    footer .line-footer{
+        text-align: center;
+    }
+}
